# dinedash

./: Cargo.toml  README.md  common.yaml  docker-compose.yml  services.yaml
crates/dinedash-auth/: Cargo.toml
crates/dinedash-customer/: Cargo.toml  Dockerfile
crates/dinedash-customer/src/: api.rs  config.rs  db.rs  main.rs  model.rs  repository.rs
crates/dinedash-order/: Cargo.toml  Dockerfile  README.md
crates/dinedash-order/src/: api.rs  main.rs  model.rs  redis.rs  repository.rs
crates/dinedash-payment/: Cargo.toml
crates/dinedash-restaurant/: Cargo.toml
crates/dinedash-security/: Cargo.toml
services/order/: Cargo.toml  Dockerfile
services/order/src/: api.rs  main.rs  model.rs
