[package]
name = "dinedash-customer"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.58"
anyhow = "1.0.81"
tokio = { version = "1.36.0", features = ["rt", "macros", "rt-multi-thread"] }
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
bigdecimal = { version = "0.4.3", features = ["serde"] }
mobc = "0.8.4"
mobc-redis = "0.8.2"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
diesel = { version = "2.1.5", features = ["postgres"] }
dotenv = "0.15.0"

[profile.release-optimized]
inherits = "release"
lto = true
strip = "symbols"
