[package]
name = "order"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }